--- a/musicmis/package.json
+++ b/musicmis/package.json
@@ -17,6 +17,8 @@
     "koa-static": "^4.0.2",
     "koa-views": "^6.1.2",
     "ms": "^2.0.0",
+    "multy": "^0.1.5",
+    "nanoid": "^1.0.1",
     "promise-mysql": "^3.1.3",
     "redis": "^2.8.0",
     "swig": "^1.4.2"
